Added title and author info for Big

--- a/book.tex
+++ b/book.tex
@@ -24,8 +24,8 @@
 
 \input{structure.tex}
 
-\title{Yet Untitled} % Book title
-\author{Yet Unnamed} % Author
+\title{Big} % Book title
+\author{Andy Ziemer} % Author
 \newcommand{\edition}{First Edition} % Book edition
 
 %----------------------------------------------------------------------------------------
