Removed non-Big files from outputting, left untitled ones. 13 Big poems

--- a/book.tex
+++ b/book.tex
@@ -35,23 +35,23 @@
 \newcommand{\introductionvar}{introduction.tex}
 
 %1
-\newcommand{\chapteronevar}{poem/big_mud.tex}
+\newcommand{\chapterIvar}{poem/big_mud.tex}
 %2
-\newcommand{\chaptertwovar}{poem/im_a_big_boy.tex}
+\newcommand{\chapterIIvar}{poem/im_a_big_boy.tex}
 %3
-\newcommand{\chapterthreevar}{poem/big_ideas.tex}
+\newcommand{\chapterIIIvar}{poem/big_ideas.tex}
 %4
-\newcommand{\chapterfourvar}{poem/untitled_1.tex}
+\newcommand{\chapterIVvar}{poem/untitled_1.tex}
 %5
-\newcommand{\chapterfivevar}{poem/untitled_2.tex}
+\newcommand{\chapterVvar}{poem/untitled_2.tex}
 %6
-\newcommand{\chaptersixvar}{poem/big_opportunities.tex}
+\newcommand{\chapterVIvar}{poem/big_opportunities.tex}
 %7
-\newcommand{\chaptersevenvar}{poem/but_we_could_be_friends.tex}
+\newcommand{\chapterVIIvar}{poem/but_we_could_be_friends.tex}
 %8
-\newcommand{\chaptereightvar}{poem/pink_panties.tex}
+\newcommand{\chapterVIIIvar}{poem/pink_panties.tex}
 %9
-\newcommand{\chapterninevar}{poem/untitled_3.tex}
+\newcommand{\chapterIXvar}{poem/untitled_3.tex}
 %10
 \newcommand{\chapterXvar}{poem/a_big_pan_of_pizza.tex}
 %11
@@ -159,168 +159,95 @@
 %----------------------------------------------------------------------------------------
 
 \chapter{Big Mud}
-
-\input{\chapteronevar}
+\input{\chapterIvar}
 
 \chapter{I'm a Big Boy}
-
-\input{\chaptertwovar}
+\input{\chapterIIvar}
 
 \chapter{Big Ideas}
-
-\input{\chapterthreevar}
+\input{\chapterIIIvar}
 
 \chapter{Untitled 1}
-
-\input{\chapterfourvar}
+\input{\chapterIVvar}
 
 \chapter{Untitled 2}
-
-\input{\chapterfivevar}
+\input{\chapterVvar}
 
 \chapter{Big Opportunities}
-
-\input{\chaptersixvar}
-
-\chapter{But We Could Be Friends}
-
-\input{\chaptersevenvar}
-
-\chapter{Pink Panties}
-
-\input{\chaptereightvar}
+\input{\chapterVIvar}
 
 \chapter{Untitled 3}
-
-\input{\chapterninevar}
+\input{\chapterIXvar}
 
 \chapter{A Big Pan of Pizza}
-
 \input{\chapterXvar}
 
 \chapter{Big Antlers}
-
 \input{\chapterXIvar}
 
 \chapter{Big Poetry}
-
 \input{\chapterXIIvar}
 
 \chapter{Big Rubber Ball}
-
 \input{\chapterXIIIvar}
 
-\chapter{Ranger Dan}
-
-\input{\chapterXIVvar}
-
-\chapter{Somewhere Between}
-
-\input{\chapterXVvar}
-
 \chapter{Voyage to the Big Land}
-
 \input{\chapterXVIvar}
 
 \chapter{This Big Sky is All Mine}
-
 \input{\chapterXVIIvar}
 
 \chapter{Oceans of Bigness and Blueness}
-
 \input{\chapterXVIIIvar}
 
-\chapter{My Own Personal Jesus J.}
-
-\input{\chapterXIXvar}
-
 \chapter{Big Breasts}
-
 \input{\chapterXXvar}
 
 \chapter{Untitled}
-
 \input{\chapterXXIvar}
 
-\chapter{Awfully Hard}
-
-\input{\chapterXXIIvar}
-
-\chapter{My Early Years}
-
-\input{\chapterXXIIIvar}
 
 \chapter{Untitled}
-
 \input{\chapterXXIVvar}
 
 \chapter{Shapes}
-
 \input{\chapterXXVvar}
 
 \chapter{Untitled}
-
 \input{\chapterXXVIvar}
 
-\chapter{Emotionalism}
-
-\input{\chapterXXVIIvar}
-
 \chapter{Untitled}
-
 \input{\chapterXXVIIIvar}
 
 \chapter{Untitled}
-
 \input{\chapterXXIXvar}
 
 \chapter{Untitled}
-
 \input{\chapterXXXvar}
 
 \chapter{Untitled}
-
 \input{\chapterXXXIvar}
 
 \chapter{Untitled}
-
 \input{\chapterXXXIIvar}
 
 \chapter{Untitled}
-
 \input{\chapterXXXIIIvar}
 
 \chapter{Untitled}
-
 \input{\chapterXXXIVvar}
 
 \chapter{Big Love}
-
 \input{\chapterXXXVvar}
 
 \chapter{Untitled}
-
 \input{\chapterXXXVIvar}
 
 \chapter{Untitled}
-
 \input{\chapterXXXVIvar}
 
-\chapter{Scenery Tiles}
-
-\input{\chapterXXXVIIvar}
-
 \chapter{Untitled}
-
 \input{\chapterXXXVIIIvar}
-
-\chapter{American Fruit}
-
-\input{\chapterXXXIXvar}
-
-\chapter{Cat}
-
-\input{\chapterXXXXvar}
 
 
 
