--- a/book.tex
+++ b/book.tex
@@ -114,6 +114,18 @@
 \newcommand{\chapterXXXIXvar}{poem/american_fruit.tex}
 %40
 \newcommand{\chapterXXXXvar}{poem/cat.tex}
+%41
+\newcommand{\chapterXLIvar}{poem/being_with_you.tex}
+%42
+\newcommand{\chapterXLIIvar}{poem/gods_front_porch_steps.tex}
+%43
+\newcommand{\chapterXLIIIvar}{poem/have_you_been_good_to_yourself.tex}
+%44
+\newcommand{\chapterXLIVvar}{poem/i_was_23_when_i_dropped.tex}
+%45
+\newcommand{\chapterXLVvar}{poem/in_the_car.tex}
+%46
+\newcommand{\chapterXLVIvar}{poem/this_one_is_for_amber.tex}
 
 
 \begin{document}
@@ -157,99 +169,10 @@
 %----------------------------------------------------------------------------------------
 %	CHAPTER ONE
 %----------------------------------------------------------------------------------------
+\setlength{\parindent}{0em}
 
-\chapter{Big Mud}
-\input{\chapterIvar}
-
-\chapter{I'm a Big Boy}
-\input{\chapterIIvar}
-
-\chapter{Big Ideas}
-\input{\chapterIIIvar}
-
-\chapter{Untitled 1}
-\input{\chapterIVvar}
-
-\chapter{Untitled 2}
-\input{\chapterVvar}
-
-\chapter{Big Opportunities}
-\input{\chapterVIvar}
-
-\chapter{Untitled 3}
-\input{\chapterIXvar}
-
-\chapter{A Big Pan of Pizza}
-\input{\chapterXvar}
-
-\chapter{Big Antlers}
-\input{\chapterXIvar}
-
-\chapter{Big Poetry}
-\input{\chapterXIIvar}
-
-\chapter{Big Rubber Ball}
-\input{\chapterXIIIvar}
-
-\chapter{Voyage to the Big Land}
-\input{\chapterXVIvar}
-
-\chapter{This Big Sky is All Mine}
-\input{\chapterXVIIvar}
-
-\chapter{Oceans of Bigness and Blueness}
-\input{\chapterXVIIIvar}
-
-\chapter{Big Breasts}
-\input{\chapterXXvar}
-
-\chapter{Untitled}
-\input{\chapterXXIvar}
-
-
-\chapter{Untitled}
-\input{\chapterXXIVvar}
-
-\chapter{Shapes}
-\input{\chapterXXVvar}
-
-\chapter{Untitled}
-\input{\chapterXXVIvar}
-
-\chapter{Untitled}
-\input{\chapterXXVIIIvar}
-
-\chapter{Untitled}
-\input{\chapterXXIXvar}
-
-\chapter{Untitled}
-\input{\chapterXXXvar}
-
-\chapter{Untitled}
-\input{\chapterXXXIvar}
-
-\chapter{Untitled}
-\input{\chapterXXXIIvar}
-
-\chapter{Untitled}
-\input{\chapterXXXIIIvar}
-
-\chapter{Untitled}
-\input{\chapterXXXIVvar}
-
-\chapter{Big Love}
-\input{\chapterXXXVvar}
-
-\chapter{Untitled}
-\input{\chapterXXXVIvar}
-
-\chapter{Untitled}
-\input{\chapterXXXVIvar}
-
-\chapter{Untitled}
-\input{\chapterXXXVIIIvar}
-
-
+\newcommand{\chaptersvar}{chapters.tex}
+\input{\chaptersvar}
 
 %----------------------------------------------------------------------------------------
 
