--- a/poem/big_opportunities.tex
+++ b/poem/big_opportunities.tex
@@ -1,25 +1,34 @@
-Lights, in\\
+Lights in\\
 Gears chug gatorade\\
 Fluid flies for more\\
-Streamlined thought bubbles\\
-Swoosh through throught\\
+Streamlined determined bubbles\\
+Swoosh through thought\\
 Racing corvettes through\\
 Primed canals\\
-Explosions in the sky\\
-Backdrop a hundred muscular stallions\\
+and explosions in the sky\\
+
+Backdrop of a hundred muscular stallions\\
 Burgeoning urgent messages\\
 Even internet speeds zip\\
 and cannons sound off\\
 counting down their gunpowder\\
-Like a formula 1 race\\
-Trodding to tapping to flickering\\
-From slime to paste to smoothie\\
-Thin light brings interstellar peace\\
-Through harmonies craft\\
-Extravagant explores thrill themselves\\
-Trilling high and low\\
-Skipping as fact as I can\\
-Fast form to energy\\
+Like a Formula 1 race\\
+From trodding to tapping to flickering,\\
+from slime to paste to smoothie,\\
+from static to crackle to lightning\\
+
+Thin light brings interstellar motion\\
+through harmonies craft\\
+Extravagant explorers thrill themselves\\
+Shed waste to break atmosphere\\
+
+Trilling high\\
+Skipping\\
+Fast form\\
+Energy\\\
+Takeaway\\
+Perfect\\
+
 This thing is definitely on\\
 
 % Andy Ziemer
