--- a/poem/big_rubber_ball.tex
+++ b/poem/big_rubber_ball.tex
@@ -1,5 +1,3 @@
-Big Rubber Ball
-
 This big rubber ball\\
 Outside catastrophe\\
 Latex protects\\
@@ -8,9 +6,11 @@ Rolling in comfort\\
 Rolling in style\\
 Spin around my finger\\
 `Till it crushes me\\
+Wobble and smack
 Play around like drums\\
 See me roll healthy\\
 See me bounce to sickness\\
+
 Can't trap it, it's gone\\
 Rolled on to another sinner\\
 Too big for one woman\\
