--- a/poem/emotionalism.tex
+++ b/poem/emotionalism.tex
@@ -14,7 +14,7 @@ Your ---- pain\\
 Atrophy\\
 Morbid doors to foreign oars\\
 Wipe boats to shores\\
-Lanters out for\\
+Lanterns out for\\
 Emotionalism\\
 
 % Andy Ziemer
