--- a/poem/im_a_big_boy.tex
+++ b/poem/im_a_big_boy.tex
@@ -9,12 +9,12 @@ Big muscles, \\
 Big dresses. \\
 
 I make my decisions each day, \\
-by the light of a bidet \\
+by the light of my bidet \\
 which to choose there are so many \\
-pick blue, or pink, or just black \\
+pick pink, periwinkle, or just black \\
 I wanna rock it all for a penny \\
 slap you up if you talk smack \\
-reveal what I am, then I'm in bliss \\
+reveal what I am, I'm in bliss \\
 This is a sight you'll never miss \\
 
 % Andy Ziemer
