--- a/poem/oceans_of_bigness_and_blueness.tex
+++ b/poem/oceans_of_bigness_and_blueness.tex
@@ -1,26 +1,26 @@
-Oceans of Bigness and Blueness
-
-Wailing waves\\
-and taciturn textures\\
-Each provoking their own harmonies\\
+Wailing waves,\\
+taciturn entwined\\
+Each provoking their own braves\\
 Drunk on salt and blue wine\\
 My feet undertow\\
 and head taking blows\\
 Draping comfort sheets\\
-Lilac-gray over my cheats\\
-I mashed and mashed so brash\\
-Struggling to stay afloat\\
-Gracious sleep under the deep\\
-and shipping rays\\
+Lilac-gray over my cheeks\\
+Smashing and mashing\\
+so brash\\
+whispers of sleep\\
+under the deep\\
+And wooden rays\\
 for which I pray\\
 Destiny does call\\
 like a punctured ball\\
 Drowned and smothered\\
 dragged down with the others\\
+
 My heart is blue, and yours too\\
-as soon as you grasp me\\
-as soon as you name me\\
-for I am this ocean so blue\\
+as soon as you grasp me,\\
+as soon as you name me.\\
+for I am in this ocean so blue\\
 
 
 % Andy Ziemer
