--- a/poem/this_big_sky_is_all_mine.tex
+++ b/poem/this_big_sky_is_all_mine.tex
@@ -1,25 +1,30 @@
-This Big Sky is All Mine
-
 Float, appreciate\\
 Fly, commiserate\\
 My song of the south\\
-Settles to gold clouds\\
+Settles on gold clouds\\
+
 I own you for as far\\
 as I'll ever see\\
+
 This flesh bleeds cotton\\
 And eyes of rubies\\
 Scan horizons\\
 Unknown for as long as I want\\
 I can explore anything\\
-I own you for as far as I'll ever see\\
+
+I own you for as far\\
+as I'll ever see\\
+
 Ripped jeans and\\
 Sequined ties\\
 Flapping blue in\\
 my expert tailwind\\
 Ascend to heaven\\
 and get lost in the sky\\
-I own you for as far as\\
-I'll ever see\\
+
+I own you for as far\\
+as I'll ever see\\
+
 Don't chart `till I'm done\\
 Crazy circles dream in my mind\\
 
