--- a/poem/voyage_to_the_big_land.tex
+++ b/poem/voyage_to_the_big_land.tex
@@ -1,9 +1,7 @@
-Voyage to the Big Land
-
 Making hardships\\
 and selling seafarers\\
 they are new partisans\\
-and the laundry-wearers\\
+and create the laundry-wearers\\
 
 Give them the best\\
 Better than deserved\\
@@ -11,13 +9,13 @@ Never a moments rest\\
 the whip was reserved\\
 
 Get `em to the stocks\\
-Black skin; no light\\
+No light; a skin immune\\
 None given. In shock.\\
 Seeing product without might\\
 
 Vengeful words\\
 Bring `em on home\\
-Selling paradise for birds\\
+Selling paradise for trophies\\
 Ending with nothing but bone.\\
 
 % Andy Ziemer
