--- a/poem/a_big_pan_of_pizza.tex
+++ b/poem/a_big_pan_of_pizza.tex
@@ -1,16 +1,15 @@
-A Big Pan of Pizza
-
 Big pan of pizza\\
 One through eight\\
 Each try is worse\\
 Trying to drown my misery\\
 Promising more math to myself\\
-As if I enjoyed that\\
+A counter; please short\\
+As if I enjoy it\\
 Waiting to be penetrated\\
 Losing out to hunger\\
-Bubbling over with guilt\\
+Bubbling hot with guilt\\
 I'd wanna share if I could\\
-But I need to count to eight\\
+But I have to count to eight\\
 
 % Andy Ziemer
 % Aug 31, 2017
