--- a/poem/big_love.tex
+++ b/poem/big_love.tex
@@ -1,24 +1,25 @@
 Big fish\\
-Reel in with date-rape bait\\
+Reeled in with date-rape bait\\
 bet you wholesome\\
 clean the guts\\
 best intentions\\
 Travel down south\\
-Land of evergreen pines\\
+Land of nevergreen pines\\
 Long and sharp\\
 Big and tall\\
 Love in a backwater boat\\
-Important to the fish\\
+Sworn to the fish\\
 Crucial to the bait\\
 I am a fishing man\\
-no tradition but the rifle\\
-No kill with a rod\\
+no tradition but the rifle,\\
+and no kill with a rod\\
 But I love to fish\\
 This love you feel\\
 when I date rape your mind\\
-custody complete\\
-This lake is a prison\\
-keys to the catch\\
+is custody complete\\
+This lake is a prison,\\
+bait is a bitch\\
+keys to the catch,\\
 Showing big rods and big love\\
 
 % Andy Ziemer
