--- a/big/big.tex
+++ b/big/big.tex
@@ -34,29 +34,29 @@
 \newcommand{\introductionvar}{introduction_big.tex}
 
 %1
-\newcommand{\chapterIvar}{poem/big_mud.tex}
+\newcommand{\chapterIvar}{../poem/big_mud.tex}
 %2
-\newcommand{\chapterIIvar}{poem/im_a_big_boy.tex}
+\newcommand{\chapterIIvar}{../poem/im_a_big_boy.tex}
 %3
-\newcommand{\chapterIIIvar}{poem/big_ideas.tex}
+\newcommand{\chapterIIIvar}{../poem/big_ideas.tex}
 %6
-\newcommand{\chapterVIvar}{poem/big_opportunities.tex}
+\newcommand{\chapterVIvar}{../poem/big_opportunities.tex}
 %10
-\newcommand{\chapterXvar}{poem/a_big_pan_of_pizza.tex}
+\newcommand{\chapterXvar}{../poem/a_big_pan_of_pizza.tex}
 %11
-\newcommand{\chapterXIvar}{poem/big_antlers.tex}
+\newcommand{\chapterXIvar}{../poem/big_antlers.tex}
 %12
-\newcommand{\chapterXIIvar}{poem/big_poetry.tex}
+\newcommand{\chapterXIIvar}{../poem/big_poetry.tex}
 %13
-\newcommand{\chapterXIIIvar}{poem/big_rubber_ball.tex}
+\newcommand{\chapterXIIIvar}{../poem/big_rubber_ball.tex}
 %16
-\newcommand{\chapterXVIvar}{poem/voyage_to_the_big_land.tex}
+\newcommand{\chapterXVIvar}{../poem/voyage_to_the_big_land.tex}
 %17
-\newcommand{\chapterXVIIvar}{poem/this_big_sky_is_all_mine.tex}
+\newcommand{\chapterXVIIvar}{../poem/this_big_sky_is_all_mine.tex}
 %18
-\newcommand{\chapterXVIIIvar}{poem/oceans_of_bigness_and_blueness.tex}
+\newcommand{\chapterXVIIIvar}{../poem/oceans_of_bigness_and_blueness.tex}
 %35
-\newcommand{\chapterXXXVvar}{poem/big_love.tex}
+\newcommand{\chapterXXXVvar}{../poem/big_love.tex}
 
 
 \begin{document}
