--- a/poem/american_fruit.tex
+++ b/poem/american_fruit.tex
@@ -29,7 +29,7 @@ leading away from things missed\\
 and towards things found,\\
 that is the reaping and the sowing\\
 just enough to be kind but not generous\\
-and unfair american fruit.\\
+an unfair American fruit.\\
 
 % Andy Ziemer
 % Oct 3, 2017
