--- a/poem/big_antlers.tex
+++ b/poem/big_antlers.tex
@@ -1,17 +1,17 @@
 These signals are inopportune\\
 Raise your head at a different time\\
 I don't need your emotion\\
-Not now; maybe something later\\
+Not now; maybe something later.\\
 
 Your antlers cue envy\\
 They tell me I'm downtrodden\\
 Yes, I love their fractals\\
-But hate why you show them\\
+But hate why you show them.\\
 
 Your antlers are loud horns\\
 Songs of mourning\\
 Songs I disagree with\\
-Bite an apple in the snow please\\
+Bite an apple in the snow, please.\\
 
 Start and complete a change\\
 I'm sick of these hates\\
