--- a/poem/big_opportunities.tex
+++ b/poem/big_opportunities.tex
@@ -1,4 +1,4 @@
-Lights in\\
+Lights high; trilling in\\
 Gears chug gatorade\\
 Fluid flies for more\\
 Streamlined determined bubbles\\
@@ -12,24 +12,17 @@ Burgeoning urgent messages\\
 Even internet speeds zip\\
 and cannons sound off\\
 counting down their gunpowder\\
-Like a Formula 1 race\\
+
 From trodding to tapping to flickering,\\
 from slime to paste to smoothie,\\
-from static to crackle to lightning\\
+from static to crackle to lightning.\\
 
 Thin light brings interstellar motion\\
 through harmonies craft\\
 Extravagant explorers thrill themselves\\
 Shed waste to break atmosphere\\
 
-Trilling high\\
-Skipping\\
-Fast form\\
-Energy\\\
-Takeaway\\
-Perfect\\
-
-This thing is definitely on\\
+This thing is definitely on.\\
 
 % Andy Ziemer
 % Aug 28, 2017
