--- a/book.tex
+++ b/book.tex
@@ -126,6 +126,56 @@
 \newcommand{\chapterXLVvar}{poem/in_the_car.tex}
 %46
 \newcommand{\chapterXLVIvar}{poem/this_one_is_for_amber.tex}
+%47
+\newcommand{\chapterXLVIIvar}{poem/untitled_17.tex}
+%48
+\newcommand{\chapterXLVIIIvar}{poem/morning_breakfast_pastry.tex}
+%49
+\newcommand{\chapterLvar}{poem/candy_hormones.tex}
+%50
+\newcommand{\chapterLIvar}{poem/along_for_the_ride.tex}
+%51
+\newcommand{\chapterLIIvar}{poem/the_void_calls.tex}
+%52
+\newcommand{\chapterLIIIvar}{poem/winter_in_cleveland.tex}
+%53
+\newcommand{\chapterLIVvar}{poem/happy_face.tex}
+%54
+\newcommand{\chapterLVvar}{poem/the_sacred_temple.tex}
+%55
+\newcommand{\chapterLVIvar}{poem/the_rules.tex}
+%56
+\newcommand{\chapterLVIIvar}{poem/selureht.tex}
+%57
+\newcommand{\chapterLVIIIvar}{poem/activities_in_quotes.tex}
+%58
+\newcommand{\chapterLVIVvar}{poem/along_for_the_ride.tex}
+%59
+\newcommand{\chapterLXvar}{poem/along_for_the_ride.tex}
+%60
+\newcommand{\chapterLXIvar}{poem/along_for_the_ride.tex}
+%61
+\newcommand{\chapterLXIIvar}{poem/along_for_the_ride.tex}
+%62
+\newcommand{\chapterLXIVvar}{poem/along_for_the_ride.tex}
+%63
+\newcommand{\chapterLXVvar}{poem/along_for_the_ride.tex}
+%64
+\newcommand{\chapterLXVIvar}{poem/along_for_the_ride.tex}
+%65
+\newcommand{\chapterLXVIIvar}{poem/along_for_the_ride.tex}
+%66
+\newcommand{\chapterLXVIIIvar}{poem/along_for_the_ride.tex}
+%67
+\newcommand{\chapterLXVIVvar}{poem/along_for_the_ride.tex}
+%68
+\newcommand{\chapterLXXXvar}{poem/along_for_the_ride.tex}
+%69
+\newcommand{\chapterLXXXIvar}{poem/along_for_the_ride.tex}
+%70
+\newcommand{\chapterLXXXIIvar}{poem/along_for_the_ride.tex}
+%71
+\newcommand{\chapterLXXXIIIvar}{poem/along_for_the_ride.tex}
 
 
 \begin{document}
