--- a/chapters.tex
+++ b/chapters.tex
@@ -118,6 +118,65 @@
 \chapter{This One is for Amber}
 \input{\chapterXLVIvar}
 
+\chapter{Untitled}
+\input{\chapterXLVIIvar}
+
+\chapter{Morning Breakfast Pasty}
+\input{\chapterXLVIIIvar}
+
+\chapter{Candy Hormones}
+\input{\chapterLvar}
+
+\chapter{Along for the Ride}
+\input{\chapterLIvar}
+
+\chapter{The Void Calls}
+\input{\chapterLIIvar}
+
+\chapter{Winter in Cleveland}
+\input{\chapterLIIIvar}
+
+\chapter{Happy Face}
+\input{\chapterLIVvar}
+
+\chapter{The Sacred Temple}q
+\input{\chapterLVvar}
+
+\chapter{The Rules}
+\input{\chapterLVIvar}
+
+\chapter{Selureht}
+\input{\chapterLVIIvar}
+
+\chapter{Activities in Quotes}
+\input{\chapterLVIIIvar}
+
+\chapter{1}
+\input{\chapterLVIVvar}
+
+\chapter{2}
+\input{\chapterLXvar}
+
+\chapter{3}
+\input{\chapterLXIvar}
+
+\chapter{4}
+\input{\chapterLXIIvar}
+
+\chapter{5}
+\input{\chapterLXIIIvar}
+
+\chapter{6}
+\input{\chapterLXIVvar}
+
+\chapter{7}
+\input{\chapterLXXvar}
+
+\chapter{8}
+\input{\chapterLXXIvar}
+
+
+
 
 
 
